@@ -41,7 +41,7 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.concurrent.atomic.AtomicLong;
-import java.util.stream.Collectors;
+
 
 @Component
 public class PolygonConverter extends BidirectionalConverter<Polygon, PolygonType> {
@@ -73,7 +73,7 @@ public class PolygonConverter extends BidirectionalConverter<Polygon, PolygonTyp
                 .map(PolygonType::getInterior)
                 .map(list -> list.stream()
                         .map(this::extractValues)
-                        .collect(Collectors.toList()))
+                        .toList())
                 .filter(list -> !list.isEmpty());
 
 
